--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   <div class="rp-details">
                     <!-- Title and para -->
                     <h5><a href="#">Entrepreneurship </a></h5>
-                    <p>Designing an idea that you love and executing?</p>         
+                    <p>Designing an idea that you love and need help executing?</p>         
                   </div>                
                 </div>        
             </li>
@@ -312,250 +312,9 @@
 
 <!-- Pricing table starts -->
 
-        <div class="pricing-table-one">
-          <!-- Title -->
-          <h4 class="title">Pricing Table</h4>
-            <div class="row-fluid">
-
-              <div class="span6">
-
-                <!-- Item starts -->
-                <div class="price-item">
-                  <div class="row-fluid">
-
-                    <div class="span9">
-                      <!-- Title -->
-                      <h6>Basic Package</h6>
-                      <!-- Details -->
-                      <p>100GB Storage, 400GB Bandwidth, 5 Domains, Fully Managed, 24x7 Support.</p>
-                    </div>
-
-                    <div class="span3">
-                      <!--Buttons -->
-                      <a href="#" class="btn btn-danger">Buy  $20/m</a>
-                      <a href="#" class="btn">Contact Us</a>
-                    </div>
-
-                  </div>
-                </div>
-                <!-- Item ends -->
-
-                <!-- Item starts -->
-                <div class="price-item">
-                  <div class="row-fluid">
-
-                    <div class="span9">
-                      <h6>Professional Package</h6>
-                      <p>100GB Storage, 400GB Bandwidth, 5 Domains, Fully Managed, 24x7 Support.</p>
-                    </div>
-
-                    <div class="span3">
-                      <a href="#" class="btn btn-danger">Buy  $30/m</a>
-                      <a href="#" class="btn">Contact Us</a>
-                    </div>
-
-                  </div>
-                </div>
-                <!-- Item ends -->
-
-              </div>
-
-              <div class="span6">
-
-                <!-- Item starts -->
-                <div class="price-item">
-                  <div class="row-fluid">
-
-                    <div class="span9">
-                      <h6>Business Package</h6>
-                      <p>100GB Storage, 400GB Bandwidth, 5 Domains, Fully Managed, 24x7 Support.</p>
-                    </div>
-
-                    <div class="span3">
-                      <a href="#" class="btn btn-danger">Buy  $40/m</a>
-                      <a href="#" class="btn">Contact Us</a>
-                    </div>
-
-                  </div>
-                </div>
-                <!-- Item ends -->
-
-                <!-- Item starts -->
-                <div class="price-item">
-                  <div class="row-fluid">
-
-                    <div class="span9">
-                      <h6>Enterprice Package</h6>
-                      <p>100GB Storage, 400GB Bandwidth, 5 Domains, Fully Managed, 24x7 Support.</p>
-                    </div>
-
-                    <div class="span3">
-                      <a href="#" class="btn btn-danger">Buy  $50/m</a>
-                      <a href="#" class="btn">Contact Us</a>
-                    </div>
-
-                  </div>
-                </div>
-                <!-- Item ends -->                
-
-              </div>            
-
-            </div>
-        </div>
-
 
         <!-- Pricing table ends -->
 
-
-<!-- Recent posts starts -->
-
-        <div class="row-fluid">
-          <div class="span12">
-            <div class="recent-posts">
-              <h4 class="title">Recent Posts</h4>
-              <div class="carousel_nav pull-right">
-                <!-- Carousel navigation -->
-                <a class="prev" id="car_prev1" href="#"><i class="icon-chevron-left"></i></a>
-                <a class="next" id="car_next1" href="#"><i class="icon-chevron-right"></i></a>
-              </div>
-              <div class="clearfix"></div>
-              <ul class="recent-posts-caro">
-                  <!-- Recent posts #1 -->
-                  <!-- Each carousel should be enclosed inside "li" tag -->
-                  <li>
-                      <div class="rp-item"> 
-                        <!-- Image. -->
-                        <div class="rp-image">        
-                          <a href="#"><img src="img/photos/r1.jpg" alt=""/></a>
-                        </div>
-                        <div class="rp-details">
-                          <!-- Title and para -->
-                          <h5><a href="#">Vitae molestie </a></h5>
-                          <p>Travel far away to a space station.</p>         
-                        </div>                
-                      </div>        
-                  </li>
-                  <!-- Recent posts #2 -->
-                  <li>
-                      <div class="rp-item"> 
-                        <div class="rp-image">        
-                          <a href="#"><img src="img/photos/r2.jpg" alt=""/></a>
-                        </div>
-                        <div class="rp-details">
-                          <h5><a href="#">Sed diam nisi</a></h5>
-                          <p>Travel far away to a space station.</p>         
-                        </div>                
-                      </div>        
-                  </li>
-                  <!-- Recent posts #3 -->
-                  <li>
-                      <div class="rp-item"> 
-                        <div class="rp-image">        
-                          <a href="#"><img src="img/photos/r3.jpg" alt=""/></a>
-                        </div>
-                        <div class="rp-details">
-                          <h5><a href="#">Nisi vitaetie </a></h5>
-                          <p>Travel far away to a space station.</p>         
-                        </div>                
-                      </div>        
-                  </li>
-                  <!-- Recent posts #4 -->
-                  <li>
-                      <div class="rp-item"> 
-                        <div class="rp-image">        
-                          <a href="#"><img src="img/photos/r4.jpg" alt=""/></a>
-                        </div>
-                        <div class="rp-details">
-                          <h5><a href="#">Diam nisivitae </a></h5>
-                          <p>Travel far away to a space station.</p>         
-                        </div>                
-                      </div>        
-                  </li>
-                  <!-- Recent posts #5 -->
-                  <li>
-                      <div class="rp-item"> 
-                        <div class="rp-image">        
-                          <a href="#"><img src="img/photos/r5.jpg" alt=""/></a>
-                        </div>
-                        <div class="rp-details">
-                          <h5><a href="#">Diam nisivitae </a></h5>
-                          <p>Travel far away to a space station.</p>         
-                        </div>                
-                      </div>        
-                  </li>    
-                  <!-- Recent posts #6 -->
-                  <li>
-                      <div class="rp-item"> 
-                        <div class="rp-image">        
-                          <a href="#"><img src="img/photos/r6.jpg" alt=""/></a>
-                        </div>
-                        <div class="rp-details">
-                          <h5><a href="#">Diam nisivitae </a></h5>
-                          <p>Travel far away to a space station.</p>         
-                        </div>                
-                      </div>        
-                  </li>                                                      
-                </ul>
-              </div>
-            </div>
-          </div>
-
-
-        <!-- Recent posts ends -->
-
-
-        <!-- Recent News starts -->
-
-        <div class="recent-news">
-          <!-- Title -->
-          <h4 class="title">Recent News 
-            <!-- All news link -->
-            <span class="pull-right"><a href="#">View All News</a></span>
-          </h4>
-          <div class="row-fluid">
-
-            <div class="span3">
-              <!-- News item -->
-              <div class="news-item">
-                <div class="news-date color">2011</div>
-                <div class="news-title"><a href="#">Etiam at nulla rhoncus lorem fermentum purus</a></div>
-                <div class="news-description">Phasellus purus lectus rhoncus fermentum convallis.</div>
-                <a href="#" class="read">Read More <i class="icon-double-angle-right"></i></a>
-              </div>
-            </div>
-
-            <div class="span3">
-              <!-- News item -->
-              <div class="news-item">
-                <div class="news-date color">2012</div>
-                <div class="news-title"><a href="#">Phasellus at lorem ut purus lectus  fermentum</a></div>
-                <div class="news-description">Etiam at nulla rhoncus lorem  rhoncus purus.</div>
-                <a href="#" class="read">Read More <i class="icon-double-angle-right"></i></a>
-              </div>
-            </div>
-
-            <div class="span3">
-              <!-- News item -->
-              <div class="news-item">
-                <div class="news-date color">2013</div>
-                <div class="news-title"><a href="#">Sed a interdum mauris duis eget purus risus</a></div>
-                <div class="news-description">Acrci  ut purus lectus rhoncus fermentum convallis.</div>
-                <a href="#" class="read">Read More <i class="icon-double-angle-right"></i></a>
-              </div>
-            </div>
-
-            <div class="span3">
-              <!-- News item -->
-              <div class="news-item">
-                <div class="news-date color">2014</div>
-                <div class="news-title"><a href="#">Etiam at nulla rhoncus lorem fermentum purus</a></div>
-                <div class="news-description">Phasellus at lorem lectus  fermentum convallis.</div>
-                <a href="#" class="read">Read More <i class="icon-double-angle-right"></i></a>
-              </div>
-            </div>                                  
-
-          </div>
-        </div>
 
         <!-- Recent News Ends -->
 
@@ -564,7 +323,7 @@
         <div class="row-fluid">
           <div class="span12">
             <div class="cta">
-              Do you like our works <i class="icon-desktop color"></i> Feel free to Contact us <i class="icon-envelope-alt color"></i>  Our Email is<br />
+              <i class="icon-desktop color"></i> Feel free to Contact us <i class="icon-envelope-alt color"></i>  Our Email is<br />
               <a href="mailto:youremail@gmail.com">contact@domain.com</a>
             </div>
           </div>
@@ -653,9 +412,9 @@
                 <div class="widget">
                   <h6>Contact</h6>
                   <hr />
-                  <i class="icon-home"></i> &nbsp; 123, Los Angeles, CA, 54321.
+                  <i class="icon-home"></i> &nbsp; 200 12th Street, San Francisco, CA, 94303.
                   <hr />
-                  <i class="icon-phone"></i> &nbsp; +239-3823-3434
+                  <i class="icon-phone"></i> &nbsp; +631-921-7522
                   <hr />
                   <i class="icon-envelope-alt"></i> &nbsp; <a href="mailto:#">someone@company.com</a>
                   <hr />
@@ -667,50 +426,13 @@
                     </div>
                 </div>
               </div>
-
-              <div class="span3">
-                <div class="widget">
-                  <h6>Links Goes Here</h6>
-                  <hr />
-                      <ul>
-                        <li><a href="#">Condimentum</a></li>
-                        <li><a href="#">Etiam at</a></li>
-                        <li><a href="#">Fusce vel</a></li>
-                        <li><a href="#">Vivamus</a></li>
-                        <li><a href="#">Pellentesque</a></li>
-                        <li><a href="#">Vivamus</a></li>
-                      </ul>
-                </div>
-              </div> 
-
-              <div class="span3">
-                <div class="widget">
-                  <h6>Latest Tweets</h6>
-                  <hr />
-                    <div class="tweet"></div>
-                </div>
-              </div>
-
-              <div class="span3">
-                <div class="widget">
-                  <h6>Links Goes Here</h6>
-                  <hr />
-                      <ul>
-                        <li><a href="#">Condimentum</a></li>
-                        <li><a href="#">Etiam at</a></li>
-                        <li><a href="#">Fusce vel</a></li>
-                        <li><a href="#">Vivamus</a></li>
-                        <li><a href="#">Pellentesque</a></li>
-                        <li><a href="#">Vivamus</a></li>
-                      </ul>
-                </div>
-              </div>             
+   
               
             </div>
 
             <hr />
             <!-- Copyright info -->
-            <p class="copy">Copyright &copy; 2012 | <a href="#">Your Site</a></p>
+            <p class="copy">Copyright &copy; 2013 | <a href="#">Your Site</a></p>
       
   <div class="clearfix"></div>
   </div>
